    AXP288_CHARGER, AXP288_FUEL_GAUGE, EXTCON_AXP288, AXP288_ADC as modules
    (Closes: #873038)
  * thp: Enable TRANSPARENT_HUGEPAGE_ALWAYS instead of
    TRANSPARENT_HUGEPAGE_MADVISE
  * ALSA: Enable SND_OSSEMUL, a new dependency of SND_{MIXER,PCM}_OSS
  * [armel] rtc: Disable RTC_NVMEM
  * [x86] hyperv-daemons: Use pid file name in init script status operation

  [ Uwe Kleine-König ]
  * [arm64] really enable NET_DSA_MV88E6XXX for Espressobin

  [ John Paul Adrian Glaubitz ]
  * [m68k] Enable CONFIG_PATA_FALCON as module.

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 21 Sep 2017 23:49:55 +0100

linux (4.13.2-1~exp1) experimental; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.13.2

  [ Uwe Kleine-König ]
  * USB/misc: reenable UCSI which got lost due to upstream changes
  * update kernel config templates for upstream changes
  * [amd64] enable CONFIG_SPI_PXA2XX for Apple MacBook Pro (Closes: #872004)

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 19 Sep 2017 18:35:42 +0100

linux (4.13.1-1~exp1) experimental; urgency=medium

  * New upstream release: https://kernelnewbies.org/Linux_4.13
  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.13.1

  [ Roger Shimizu ]
  * debian/bin/buildcheck.py:
    Add check for uncompressed Image size, which is necessary for
    armel/marvell flavour currently.

  [ Ben Hutchings ]
  * [mips*/octeon] mmc: Enable MMC_CAVIUM_OCTEON as module (Closes: #800594)

  [ Uwe Kleine-König ]
  * [arm64] enable NET_DSA_MV88E6XXX for Espressobin.

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 11 Sep 2017 05:40:04 +0100

linux (4.13~rc7-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * [sh4] Do not use hyphen in exported variable names (fixes FTBFS)
  * aufs: Update support patchset to aufs4.x-rcN-20170828

  [ Roger Shimizu ]