@@ -16,11 +16,6 @@ ifdef DEBIAN_KERNEL_JOBS
   MAKEFLAGS += -j$(DEBIAN_KERNEL_JOBS)
 endif
 BUILD_STAGE1 := $(filter stage1,$(DEB_BUILD_PROFILES))
-ifneq (,$(filter nodoc,$(DEB_BUILD_PROFILES)))
-# This only disables building the linux-doc and linux-manual packages.
-# The rules for tools packages check separately for the 'nodoc' profile.
-  MAKEFLAGS += DO_DOCS=False
-endif
 ifneq (,$(filter pkg.linux.notools,$(DEB_BUILD_PROFILES)))
   MAKEFLAGS += DO_TOOLS=False
 endif
