@@ -67,7 +67,9 @@ binary-arch-flavour: install-headers_$(ARCH)_$(FEATURESET)_$(FLAVOUR)
 
 ifneq ($(DO_DOCS),False)
   binary-indep: install-doc
-  build-indep: $(STAMPS_DIR)/build-doc
+  ifeq (,$(filter nodoc,$(DEB_BUILD_PROFILES)))
+    build-indep: $(STAMPS_DIR)/build-doc
+  endif
 endif
 binary-indep: install-source
 binary-indep: install-support
@@ -191,11 +193,13 @@ $(STAMPS_DIR)/build_$(ARCH)_$(FEATURESET)_$(FLAVOUR):
 
 $(STAMPS_DIR)/build-doc: DIR=$(BUILD_DIR)/build-doc
 $(STAMPS_DIR)/build-doc: $(STAMPS_DIR)/source
+ifeq (,$(filter nodoc,$(DEB_BUILD_PROFILES)))
 	mkdir -p '$(BUILD_DIR)'
 	rm -rf '$(DIR)'
 	$(call copy_source,$(DIR))
 	+$(MAKE_CLEAN) -C '$(DIR)' xmldocs
 	+$(MAKE_CLEAN) -C '$(DIR)' htmldocs mandocs
+endif
 	@$(stamp)
 
 install-base:
@@ -223,6 +227,7 @@ install-doc: OUT_DIR = $(PACKAGE_DIR)/usr/share/doc/$(PACKAGE_NAME)
 install-doc: DH_OPTIONS = -p$(PACKAGE_NAME)
 install-doc: $(STAMPS_DIR)/build-doc
 	dh_prep
+ifeq (,$(filter nodoc,$(DEB_BUILD_PROFILES)))
 	mkdir -p $(OUT_DIR)
 	set -o pipefail; \
 	find CREDITS MAINTAINERS README Documentation \
@@ -247,6 +252,7 @@ install-doc: $(STAMPS_DIR)/build-doc
 			ln -sr "$$dest.gz" "$$link.gz"; \
 		fi; \
 	done
+endif
 	+$(MAKE_SELF) install-base
 
 install-manual: PACKAGE_NAME = $(SOURCE_PACKAGE_NAME)-manual-$(VERSION)
