@@ -1,5 +1,5 @@
 Package: @source_package@-doc-@version@
-Build-Profiles: <!stage1 !nodoc>
+Build-Profiles: <!stage1>
 Architecture: all
 Depends: ${misc:Depends}
 Section: doc
