@@ -18,6 +18,8 @@ linux (4.13.4-1~exp1) UNRELEASED; urgency=medium
   * ALSA: Enable SND_OSSEMUL, a new dependency of SND_{MIXER,PCM}_OSS
   * [armel] rtc: Disable RTC_NVMEM
   * [x86] hyperv-daemons: Use pid file name in init script status operation
+  * Update policy version to 4.1.1:
+    - linux-doc: Build an empty package when the nodoc profile is used
 
   [ Uwe Kleine-König ]
   * [arm64] really enable NET_DSA_MV88E6XXX for Espressobin
